fix(Angular): :lipstick: stop heading text from becoming to large when overscrolling on iOS

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,7 +40,7 @@ mat-toolbar.mat-toolbar-single-row {
   }
 
   h1 {
-    font-size: calc((var(--toolbar-height) - 32px) * #{20 / (56 - 32)});
+    font-size: calc((min(var(--toolbar-height), #{$max-toolbar-height}) - 32px) * #{20 / (56 - 32)});
     align-self: center;
     user-select: none;
     outline: none;
